# SmartDigest

./: .gitignore  .vercelignore  README.md  app.py  auth.py  database.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: chat_engine.py  chat_query_expansion.py  chat_rag.py  chat_search.py  database.py  document_extractor.py  gemini_client.py  main.py  summary_cards.py  summary_engine.py  summary_service.py  usage_tracker.py  vision_text.py
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: annotationService.js  axiosInstance.js  chatService.js  client.js  config.js  gridLayoutService.js  index.js  layoutSnapshotService.js  noteService.js  pageService.js  usageService.js
frontend/src/components/: AccordionBox.jsx  AnnotationList.jsx  AnnotationModal.jsx  AnnotationPopup.jsx  AppLogo.jsx  DigestList.jsx  DocumentMinimap.jsx  ExportIcon.jsx  ExportMenu.jsx  FileUpload.jsx  GridCardItem.jsx  HomeDashboard.jsx  KnowledgeUploadAccordion.jsx  LabeledEdge.jsx  LayoutDragSource.jsx  LayoutSnapshotBar.jsx  LayoutTabPopover.jsx  LayoutViewer.jsx  LoadingSpinner.jsx  LoginForm.jsx  MindMapCanvas.jsx  NoteComposePopup.jsx  NoteList.jsx  NotePopup.jsx  PageMiniFooter.jsx  PageSplitContextMenu.jsx  PageSplitDivider.jsx  PageToolbar.jsx  PageViewToolbar.jsx  PageViewer.jsx  QuestionList.jsx  RandomMemoryCard.jsx  ReaderAlignToolbar.jsx  SearchIcon.jsx  SelectionActionPopup.jsx  SidebarToggle.jsx  SplittableMarkdownBody.jsx  (+11 more)
(+17 files in other folders)
